[metadata]
name = pygdebias
version = 1.1.1
author = Yushun Dong, Song Wang, Zaiyi Zheng, Zhenyu Lei, Jing Ma, Chen Chen, Jundong Li
author_email = yd6eb@virginia.edu
description = Attributed Network Datasets and Fairness-Aware Graph Mining Algorithms
license = MIT
include_package_data = True
# long_description = file: README.md

[options]
packages = find:
# long_description_content_type = text/markdown
